<resources>
    <string name="app">OpenConnect</string>
    <string name="address">Server Address:</string>
    <string name="port">Server Port:</string>
    <string name="location">Location</string>
    <string name="cant_read_folder">Unable to read directory</string>
    <string name="select">Select</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="no_data">No Data</string>
    <string name="useLZO">LZO Compression</string>
    <string name="client_no_certificate">No Certificate</string>
    <string name="client_certificate_title">Client Certificate</string>
    <string name="client_key_title">Client Certificate Key</string>
    <string name="client_pkcs12_title">PKCS12 File</string>
    <string name="ca_title">CA Certificate</string>
    <string name="no_certificate">You must select a certificate</string>
    <string name="copyright_guicode">Source code and issue tracker available at http://code.google.com/p/ics-openvpn/</string>
    <string name="copyright_others">This program uses the following components; see the source code for full details on the licenses</string>
    <string name="about">About</string>
    <string name="securid_info">SecurID info</string>
    <string name="send_feedback">Send feedback</string>
    <string name="feedback_plea">Taking a few seconds to rate an app is very important for the developer.  It allows us to continually improve the experience, and helps other users decide whether an app is right for them. How about telling us what you think?</string>
    <string name="i_love_it">I love it</string>
    <string name="needs_work">Needs work</string>
    <string name="maybe_later">Maybe later</string>
    <string name="about_openconnect">About OpenConnect</string>
    <string name="securid_none_defined">None of your VPN profiles have a SecurID token string set.\n\nTo add one, import an \"sdtid\" file or click on a \"http://127.0.0.1/securid\" URL from your email.  See the FAQ for more information.</string>
    <string name="securid_parse_error">Unable to parse the SecurID token string in this profile.</string>
    <string name="securid_internal_error">Unable to access the VPN profile.  Please file a bug report with the author.</string>
    <string name="securid_encrypted">This profile\'s SecurID token string is encrypted. Try re-importing it.</string>
    <string name="copy">Copy</string>
    <string name="next_tokencode">Next tokencode:</string>
    <string name="using_pin">Using PIN:</string>
    <string name="token_sn">Token S/N:</string>
    <string name="exp_date">Expiration date:</string>
    <string name="gmt">Current time (GMT):</string>
    <string name="dev_id">SecurID device ID:</string>
    <string name="enter_pin">Enter PIN:</string>
    <string name="new_pin">New PIN</string>
    <string name="skip">Skip</string>
    <string name="vpn_list_title">Profiles</string>
    <string name="status">Status</string>
    <string name="log">Log</string>
    <string name="vpn_type">Type</string>
    <string name="pkcs12pwquery">PKCS12 Password</string>
    <string name="file_select">Select…</string>
    <string name="file_nothing_selected">You must select a file</string>
    <string name="useTLSAuth">Use TLS Authentication</string>
    <string name="tls_direction">TLS Direction</string>
    <string name="ipv6_dialog_tile">Enter IPv6 Address/Netmask in CIDR Format (e.g. 2000:dd::23/64)</string>
    <string name="ipv4_dialog_title">Enter IPv4 Address/Netmask in CIDR Format (e.g. 1.2.3.4/24)</string>
    <string name="ipv4_address">IPv4 Address</string>
    <string name="ipv6_address">IPv6 Address</string>
    <string name="custom_option_warning">Enter custom OpenConnect options. Use with caution. Also note that many of the tun related OpenConnect settings cannot be supported by design of the VPNSettings. If you think an important option is missing contact the author</string>
    <string name="auth_username">Username</string>
    <string name="auth_pwquery">Password</string>
    <string name="static_keys_info">For the static configuration the TLS Auth Keys will be used as static keys</string>
    <string name="configure_the_vpn">Configure the VPN</string>
    <string name="menu_add_profile">Add Profile</string>
    <string name="add_profile_hostname_prompt">Enter the hostname, IP address, or URL:</string>
    <string name="hostname_examples">Valid formats include:\nvpn.example.com (typical usage)\nvpn.example.com:443 (host:port)\nhttps://vpn.example.com/my-group-url</string>
    <string name="profilename">Profile Name</string>
    <string name="no_keystore_cert_selected">You must select a User certificate</string>
    <string name="no_error_found">No error found</string>
    <string name="config_error_found">Error in Configuration</string>
    <string name="ipv4_format_error">Error parsing the IPv4 address</string>
    <string name="custom_route_format_error">Error parsing the custom routes</string>
    <string name="pw_query_hint">(leave empty to query on demand)</string>
    <string name="vpn_shortcut">OpenConnect Shortcut</string>
    <string name="vpn_launch_title">Connect to VPN</string>
    <string name="shortcut_profile_notfound">Profile specified in shortcut not found</string>
    <string name="random_host_prefix">Random Host Prefix</string>
    <string name="random_host_summary">Adds 6 random chars in front of hostname</string>
    <string name="custom_config_title">Enable Custom Options</string>
    <string name="custom_config_summary">Specify custom options. Use with care!</string>
    <string name="route_rejected">Route rejected by Android</string>
    <string name="disconnect">Disconnect</string>
    <string name="reconnect">Reconnect</string>
    <string name="reconnect_to">Reconnect to %1$s</string>
    <string name="cancel_connection">Disconnect</string>
    <string name="cancel_connection_long">Disconnect VPN</string>
    <string name="clear_log">Clear log</string>
    <string name="title_cancel">Cancel Confirmation</string>
    <string name="cancel_connection_query">Are you sure you want to disconnect?</string>
    <string name="remove_vpn">Remove VPN</string>
    <string name="check_remote_tlscert">Checks whether the server uses a certificate with TLS Server extensions (--remote-cert-tls server)</string>
    <string name="check_remote_tlscert_title">Expect TLS server certificate</string>
    <string name="remote_tlscn_check_summary">Checks the Remote Server Certificate Subject DN</string>
    <string name="remote_tlscn_check_title">Certificate Hostname Check</string>
    <string name="enter_tlscn_dialog">Specify the check used to verify the remote certificate DN (e.g. C=DE, L=Paderborn, OU=Avian IP Carriers, CN=openvpn.blinkt.de)\n\nSpecify the complete DN or the RDN (openvpn.blinkt.de in the example) or an RDN prefix for verification.\n\nWhen using RDN prefix \"Server\" matches \"Server-1\" and \"Server-2\"\n\nLeaving the text field empty will check the RDN against the server hostname.\n\nFor more details see the OpenConnect 2.3.1+ manpage under —verify-x509-name</string>
    <string name="enter_tlscn_title">Remote certificate subject</string>
    <string name="tls_key_auth">Enables the TLS Key Authentication</string>
    <string name="tls_auth_file">TLS Auth File</string>
    <string name="pull_on_summary">Requests IP addresses, routes and timing options from the server.</string>
    <string name="pull_off_summary">No information is requested from the server. Settings need to be specified below.</string>
    <string name="use_pull">Pull Settings</string>
    <string name="dns">DNS</string>
    <string name="override_dns">Override DNS Settings by Server</string>
    <string name="dns_override_summary">Use your own DNS Servers</string>
    <string name="searchdomain">searchDomain</string>
    <string name="dns1_summary">DNS Server to be used.</string>
    <string name="dns_server">DNS Server</string>
    <string name="secondary_dns_message">Secondary DNS Server used if the normal DNS Server cannot be reached.</string>
    <string name="backup_dns">Backup DNS Server</string>
    <string name="ignored_pushed_routes">Ignore pushed routes</string>
    <string name="ignore_routes_summary">Ignore routed pushed by the server.</string>
    <string name="default_route_summary">Redirects all Traffic over the VPN</string>
    <string name="use_default_title">Use default Route</string>
    <string name="custom_route_message">Enter custom routes. Only enter destination in CIDR format. \"10.0.0.0/8 2002::/16\" would direct the networks 10.0.0.0/8 and 2002::/16 over the VPN.</string>
    <string name="custom_routes_title">Custom Routes</string>
    <string name="log_verbosity_level">Log verbosity level</string>
    <string name="float_summary">Allows authenticated packets from any IP</string>
    <string name="float_title">Allow floating server</string>
    <string name="custom_options_title">Custom Options</string>
    <string name="edit_vpn">Edit VPN Settings</string>
    <string name="remove_vpn_query">Remove the VPN Profile \'%s\'?</string>
    <string name="tun_error_helpful">On some custom ICS images the permission on /dev/tun might be wrong, or the tun module might be missing completely. For CM9 images try the fix ownership option under general settings</string>
    <string name="tun_open_error">Failed to open the tun interface</string>
    <string name="error">"Error: "</string>
    <string name="clear">Clear</string>
    <string name="info">info</string>
    <string name="last_openvpn_tun_config">Opening tun interface:</string>
    <string name="local_ip_info">Local IPv4: %1$s/%2$d IPv6: %3$s MTU: %4$d</string>
    <string name="dns_server_info">DNS Server: %1$s, Domain: %2$s</string>
    <string name="routes_info">Routes: %s</string>
    <string name="routes_info6">Routes IPv6: %s</string>
    <string name="owner_fix_summary">Tries to set the owner of /dev/tun to the \'system\' UID (1000). Some CM9 images need this to make the VPNService API work. Requires root.</string>
    <string name="owner_fix">Fix ownership of /dev/tun</string>
    <string name="netchange_summary">Turning this option on will force a reconnect if the network state is changed (e.g. WiFi to/from mobile)</string>
    <string name="netchange">Reconnect on network change</string>
    <string name="advanced">Advanced</string>
    <string name="setting_loadtun_summary">Try to load the tun.ko kernel module before trying to connect. Needs rooted devices.</string>
    <string name="setting_loadtun">Load tun module</string>
    <string name="trace_log_summary">Increase logging verbosity for debugging purposes. This will affect performance.</string>
    <string name="trace_log">Enable TRACE logging</string>
    <string name="screenoff_summary">Pause the connection when the screen is off, to save battery life.</string>
    <string name="screenoff_title">Pause when asleep</string>
    <string name="device_specific">Device-specific Hacks</string>
    <string name="vpnbehaviour">VPN behavior</string>
    <string name="server">Server</string>
    <string name="profile_name">Profile name</string>
    <string name="server_address">Server address</string>
    <string name="authentication">Authentication</string>
    <string name="software_token">Software token</string>
    <string name="token_string">Token string</string>
    <string name="reported_os">Reported OS</string>
    <string name="disable_username_caching">Disable credential caching</string>
    <string name="disable_username_caching_summary">Never cache login names, user groups, or passwords</string>
    <string name="disable_xml_post">Disable XML POST</string>
    <string name="disable_xml_post_summary">Use the old authentication handshake; may fail on newer servers</string>
</resources>